#LUC070-80 Java17 : Java17 syntax changes