@@ -30,11 +30,9 @@ import org.springframework.web.bind.annotation.*;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.*;
-import java.util.stream.Collectors;
 
 
 @RestController
-//@CrossOrigin
 @Api(name="Vaults", description = "Interact with DataVault Vaults")
 public class VaultsController {
 
@@ -124,7 +122,7 @@ public class VaultsController {
                         RoleUtils.isDataOwner(roleAssignment))  && (roleAssignment.getVaultId() != null))
                 .map(roleAssignment -> vaultsService.getVault(roleAssignment.getVaultId()).convertToResponse())
                 .sorted(Comparator.comparing(VaultInfo::getCreationTime))
-                .collect(Collectors.toList());
+                .toList();
         Collections.reverse(vaultResponses);
         if(CollectionUtils.isNotEmpty(vaultResponses)) {
             for (VaultInfo vault : vaultResponses) {
@@ -154,7 +152,7 @@ public class VaultsController {
                 .filter(roleAssignment -> (RoleUtils.isVaultCreator(roleAssignment)) && (roleAssignment.getPendingVaultId() != null))
                 .map(roleAssignment -> pendingVaultsService.getPendingVault(roleAssignment.getPendingVaultId()).convertToResponse())
                 .sorted(Comparator.comparing(VaultInfo::getCreationTime))
-                .collect(Collectors.toList());
+                .toList();
         Collections.reverse(vaultResponses);
         if(CollectionUtils.isNotEmpty(vaultResponses)) {
             for (VaultInfo vault : vaultResponses) {
