@@ -3,7 +3,7 @@ package org.datavaultplatform.broker.initialise;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+
 import lombok.Getter;
 import lombok.ToString;
 import org.datavaultplatform.common.model.ArchiveStore;
@@ -17,6 +17,6 @@ public class BrokerInitialisedEvent extends ApplicationEvent {
 
   public BrokerInitialisedEvent(Object source, ArchiveStore... added) {
     super(source);
-    this.added = Arrays.stream(added).filter(Objects::nonNull).collect(Collectors.toList());
+    this.added = Arrays.stream(added).filter(Objects::nonNull).toList();
   }
 }
