@@ -4,7 +4,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 
-import java.util.Arrays;
+import java.util.List;
 import org.datavaultplatform.broker.controllers.RetentionPoliciesController;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
@@ -18,11 +18,11 @@ public class RenentionPoliciesControllerAuthTest extends BaseControllerAuthTest 
   @Test
   void testGetPolicies() {
     when(controller.getPolicies(USER_ID_1, API_KEY_1)).thenReturn(
-        Arrays.asList(AuthTestData.RETENTION_1, AuthTestData.RETENTION_2));
+        List.of(AuthTestData.RETENTION_1, AuthTestData.RETENTION_2));
 
     checkWorksWhenAuthenticatedFailsOtherwise(
         get("/retentionpolicies"),
-        Arrays.asList(AuthTestData.RETENTION_1, AuthTestData.RETENTION_2));
+        List.of(AuthTestData.RETENTION_1, AuthTestData.RETENTION_2));
 
     verify(controller).getPolicies(USER_ID_1, API_KEY_1);
   }
