@@ -2,14 +2,13 @@ package org.datavaultplatform.common.model.dao;
 
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.datavaultplatform.broker.app.DataVaultBrokerApp;
 import org.datavaultplatform.broker.test.AddTestProperties;
@@ -54,7 +53,7 @@ public class EventDAOIT extends BaseDatabaseTest {
     dao.save(event);
 
     Event foundEvent = dao.findById(event.getID()).get();
-    assertTrue(foundEvent instanceof ComputedChunks);
+    assertInstanceOf(ComputedChunks.class, foundEvent);
     ComputedChunks foundCCEvent = (ComputedChunks) foundEvent;
 
     assertEquals(event.getChunksDigest(), foundCCEvent.getChunksDigest());
@@ -66,7 +65,7 @@ public class EventDAOIT extends BaseDatabaseTest {
     dao.save(event);
 
     Event foundEvent = dao.findById(event.getID()).get();
-    assertTrue(foundEvent instanceof Complete);
+    assertInstanceOf(Complete.class, foundEvent);
     Complete foundCompleteEvent = (Complete) foundEvent;
 
     assertEquals(event.getArchiveIds(), foundCompleteEvent.getArchiveIds());
@@ -78,7 +77,7 @@ public class EventDAOIT extends BaseDatabaseTest {
     dao.save(event);
 
     Event foundEvent = dao.findById(event.getID()).get();
-    assertTrue(foundEvent instanceof ComputedEncryption);
+    assertInstanceOf(ComputedEncryption.class, foundEvent);
     ComputedEncryption foundComputedEncryptionEvent = (ComputedEncryption) foundEvent;
 
     assertEquals(event.getChunksDigest(), foundComputedEncryptionEvent.getChunksDigest());
@@ -96,7 +95,7 @@ public class EventDAOIT extends BaseDatabaseTest {
     dao.save(event);
 
     Event foundEvent = dao.findById(event.getID()).get();
-    assertTrue(foundEvent instanceof UploadComplete);
+    assertInstanceOf(UploadComplete.class, foundEvent);
     UploadComplete foundCompleteEvent = (UploadComplete) foundEvent;
 
     assertEquals(event.getArchiveIds(), foundCompleteEvent.getArchiveIds());
@@ -163,13 +162,13 @@ public class EventDAOIT extends BaseDatabaseTest {
 
   void checkSameEventMessages(Collection<Event> actual, Event... expected){
     assertEquals(
-        Arrays.stream(expected).map(Event::getMessage).sorted().collect(Collectors.toList()),
-        actual.stream().map(Event::getMessage).sorted().collect(Collectors.toList()));
+        Arrays.stream(expected).map(Event::getMessage).sorted().toList(),
+        actual.stream().map(Event::getMessage).sorted().toList());
   }
   void checkOrderOfEventMessages(Collection<Event> actual, Event... expected){
     assertEquals(
-        Arrays.stream(expected).map(Event::getMessage).collect(Collectors.toList()),
-        actual.stream().map(Event::getMessage).collect(Collectors.toList()));
+        Arrays.stream(expected).map(Event::getMessage).toList(),
+        actual.stream().map(Event::getMessage).toList());
   }
 
 
