@@ -1,19 +1,25 @@
 package org.datavaultplatform.common.model.dao.custom;
 
-import jakarta.persistence.EntityManager;
-import jakarta.persistence.criteria.Path;
-import jakarta.persistence.criteria.*;
-import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.StringUtils;
-import org.datavaultplatform.common.model.*;
-import org.datavaultplatform.common.model.Deposit.Status;
-import org.datavaultplatform.common.model.dao.SchoolPermissionQueryHelper;
-import org.datavaultplatform.common.util.DaoUtils;
-
 import java.util.ArrayList;
-import java.util.Collections;
+
 import java.util.Date;
 import java.util.List;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.CriteriaQuery;
+import jakarta.persistence.criteria.Order;
+import jakarta.persistence.criteria.Path;
+import jakarta.persistence.criteria.Root;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
+import org.datavaultplatform.common.model.Deposit;
+import org.datavaultplatform.common.model.Deposit.Status;
+import org.datavaultplatform.common.model.Deposit_;
+import org.datavaultplatform.common.model.Permission;
+import org.datavaultplatform.common.model.User_;
+import org.datavaultplatform.common.model.Vault_;
+import org.datavaultplatform.common.model.dao.SchoolPermissionQueryHelper;
+import org.datavaultplatform.common.util.DaoUtils;
 
 @Slf4j
 public class DepositCustomDAOImpl extends BaseCustomDAOImpl implements DepositCustomDAO {
@@ -31,7 +37,7 @@ public class DepositCustomDAOImpl extends BaseCustomDAOImpl implements DepositCu
     }
 
     log.info("DAO.list query="+query);
-    if((query == null || "".equals(query)) == false) {
+    if((query == null || query.isEmpty()) == false) {
       log.info("apply restrictions");
 
       String queryLower = getQueryLower(query);
@@ -66,7 +72,7 @@ public class DepositCustomDAOImpl extends BaseCustomDAOImpl implements DepositCu
       } else {
         order = cb.desc(sortPath);
       }
-      return Collections.singletonList(order);
+      return List.of(order);
     });
     helper.setMaxResults(maxResult);
     helper.setFirstResult(offset);
@@ -82,7 +88,7 @@ public class DepositCustomDAOImpl extends BaseCustomDAOImpl implements DepositCu
       return 0;
     }
 
-    if((query == null || "".equals(query)) == false) {
+    if((query == null || query.isEmpty()) == false) {
       log.info("apply restrictions");
       String queryLower = getQueryLower(query);
       helper.setSinglePredicateHelper((cb, rt) -> cb.or(
@@ -162,7 +168,7 @@ public class DepositCustomDAOImpl extends BaseCustomDAOImpl implements DepositCu
       } else {
         order = cb.desc(sortPath);
       }
-      return Collections.singletonList(order);
+      return List.of(order);
     });
 
     List<Deposit> deposits = helper.getItems();
