@@ -1,15 +1,14 @@
 package org.datavaultplatform.common.model.dao.custom;
 
+import java.util.ArrayList;
+
+import java.util.List;
 import jakarta.persistence.EntityManager;
 import org.datavaultplatform.common.model.Group;
 import org.datavaultplatform.common.model.Group_;
 import org.datavaultplatform.common.model.Permission;
 import org.datavaultplatform.common.model.dao.SchoolPermissionQueryHelper;
 import org.datavaultplatform.common.util.DaoUtils;
-
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
 
 
 public class GroupCustomDAOImpl extends BaseCustomDAOImpl implements GroupCustomDAO {
@@ -25,7 +24,7 @@ public class GroupCustomDAOImpl extends BaseCustomDAOImpl implements GroupCustom
             return new ArrayList<>();
         }
         helper.setOrderByHelper((cb,rt)->
-            Collections.singletonList(cb.asc(rt.get(Group_.NAME))));
+            List.of(cb.asc(rt.get(Group_.NAME))));
         List<Group> groups = helper.getItems();
         return groups;
     }
