@@ -1,5 +1,27 @@
 package org.datavaultplatform.common.crypto;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertIterableEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+import java.io.File;
+import java.io.FileInputStream;
+import java.nio.charset.StandardCharsets;
+import java.security.KeyStore;
+import java.time.Instant;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Date;
+import java.util.Enumeration;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Locale;
+import java.util.Set;
+import java.util.UUID;
+import javax.crypto.SecretKey;
 import jakarta.xml.bind.DatatypeConverter;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
@@ -9,18 +31,6 @@ import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import org.springframework.util.DigestUtils;
-
-import javax.crypto.SecretKey;
-import java.io.File;
-import java.io.FileInputStream;
-import java.nio.charset.StandardCharsets;
-import java.security.KeyStore;
-import java.time.Instant;
-import java.time.ZoneId;
-import java.time.format.DateTimeFormatter;
-import java.util.*;
-
-import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Tests parts of the Encryption class that uses Java Key Store File.
@@ -92,7 +102,7 @@ public class EncryptionUsingJavaKeyStoreFileIT {
     }
 
     // Alias names are stored in JKS as lowercase!
-    assertIterableEquals(Arrays.asList(KEY_NAME_PRIVATE_KEYS, KEY_NAME_DATA), al);
+    assertIterableEquals(List.of(KEY_NAME_PRIVATE_KEYS, KEY_NAME_DATA), al);
     SecretKey directFromKSPrivateKeys = (SecretKey) ks.getKey(KEY_NAME_PRIVATE_KEYS, KEY_PASSWORD.toCharArray());
     checkAES(directFromKSPrivateKeys);
     SecretKey directFromKSData = (SecretKey) ks.getKey(KEY_NAME_DATA, KEY_PASSWORD.toCharArray());
